fix for not responsive results tiles

--- a/styles.css
+++ b/styles.css
@@ -2866,6 +2866,7 @@ span.mod_solo_grading_original_preword,span.mod_solo_grading_original_postword {
 	margin: 15px;
 	padding: 5px;
 	display: flex;
+    flex-wrap: wrap;
 }
 .mod_solo_result_squaretile {
 	margin: 8px;
